# s2u-logger

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  logger.cpp  logger.hpp
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  cmake-multi-platform.yml
cmake/: sourcesdk.cmake
cmake/platform/: linux.cmake  macos.cmake  shared.cmake  windows.cmake
include/: logger.hpp
include/logger/: detailed.hpp  error.hpp  ilogging.hpp  macros.hpp  message.hpp  scope.hpp  throw_assert.hpp  warning.hpp
logger/: detailed.cpp  detailed.hpp  error.cpp  error.hpp  ilogging.hpp  message.cpp  message.hpp  scope.cpp  scope.hpp  throw_assert.cpp  throw_assert.hpp  warning.cpp  warning.hpp
src/: logger.cpp
src/logger/: detailed.cpp  detailed.hpp  error.cpp  error.hpp  message.cpp  scope.cpp  throw_assert.cpp  warning.cpp
